--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@ body{
     font-family: Arial, Verdana;
     background-color: black;
     color: white;
-    margin: 20%;
+    margin: 20px;
     margin-bottom: 0;}
 
 h1{
     text-align: center;
     font-size: 42px;
-    padding: 15%;
+    padding: 15px;
 }
 
 h2{
@@ -17,10 +17,10 @@ h2{
 
 }
 
-p{
+p {
     display: block;
-    padding-top: 10%;
-    padding-left: 10%;
+    padding-top: 10px;
+    padding-left: 10px;
     font-size: 24px;
 }
 
@@ -49,16 +49,16 @@ div {
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid black; 
-    border-left: 5px solid black; 
+    border-bottom: 2px solid red; 
+    border-left: 5px solid red; 
 }
 
 .blue {
     background-color: #0000ff;
     text-align: left; 
     margin-right: 50px; 
-    border-top: 2px solid; 
-    border-right: 5px solid; 
+    border-top: 2px solid #0000ff; 
+    border-right: 5px solid #0000ff; 
     color: #c4c4c4;
 
 }
@@ -71,8 +71,8 @@ div {
     background-color: #ffff00;
     text-align: right; 
     margin-left: 50px; 
-    border-bottom: 2px solid; 
-    border-left: 5px solid; 
+    border-bottom: 2px solid #ffff00; 
+    border-left: 5px solid #ffff00; 
     color: #707070; 
 
 }
@@ -82,8 +82,8 @@ div {
     background-color: #008500; 
     text-align: left; 
     margin-right: 50px; 
-    border-top: 2px solid; 
-    border-right: 5px solid; 
+    border-top: 2px solid #008500; 
+    border-right: 5px solid #008500; 
     color: #000; 
 }
 
