--- a/css/style.css
+++ b/css/style.css
@@ -49,16 +49,20 @@ div {
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid red; 
-    border-left: 5px solid red; 
+    border-bottom: 2px solid white; 
+    border-left: 5px solid white; 
+    border-top: none;
+    border-right: none;
 }
 
 .blue {
     background-color: #0000ff;
     text-align: left; 
     margin-right: 50px; 
-    border-top: 2px solid #0000ff; 
-    border-right: 5px solid #0000ff; 
+    border-top: 2px solid white; 
+    border-right: 5px solid white;
+    border-bottom: none;
+    border-left: none; 
     color: #c4c4c4;
 
 }
@@ -71,8 +75,10 @@ div {
     background-color: #ffff00;
     text-align: right; 
     margin-left: 50px; 
-    border-bottom: 2px solid #ffff00; 
-    border-left: 5px solid #ffff00; 
+    border-bottom: 2px solid white; 
+    border-left: 5px solid white; 
+    border-right: none; 
+    border-top: none;
     color: #707070; 
 
 }
@@ -82,8 +88,10 @@ div {
     background-color: #008500; 
     text-align: left; 
     margin-right: 50px; 
-    border-top: 2px solid #008500; 
-    border-right: 5px solid #008500; 
+    border-top: 2px solid white; 
+    border-right: 5px solid white; 
+    border-bottom: none; 
+    border-left: none;
     color: #000; 
 }
 
